--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@ html {
 }
 
 #card {
+/* 	width: 900px;
+	height: 600px; */
 	-webkit-box-shadow: 7px 8px 10px 0px rgba(0,0,0,0.54); 
 	box-shadow: 7px 8px 10px 0px rgba(0,0,0,0.54);
 	border-radius: 8px;
 	font-size: 16px;
 	font-weight: 600;
-	width: 900px;
-	height: 600px;
 	font-family: 'Karla', sans-serif;
 	overflow: hidden;
 }
@@ -31,12 +31,11 @@ html {
 }
 
 #bottom-left {
+	padding: 35px;
 	vertical-align: top;
-	padding-top: 25px;
-	padding-left: 40px;
 	background-color: #2ab2af;
 	display: inline-block;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 }
 
@@ -44,7 +43,7 @@ html {
 	padding: 20px;
 	background-color: #1BCCC2;
 	display: inline-block;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 }
 
@@ -71,7 +70,7 @@ html {
 }
 
 #bottom h4 {
-	margin-top: 20px;
+	margin-top: 15px;
 	font-size: 1.5rem;
 	font-weight: 600;
 }
@@ -97,16 +96,18 @@ button {
 	background-color: #c0df34;
 	color: white;
 	font-size: 1.1rem;
-	width: 85%;
-	height: 17%;
+	width: 100%;
+	height: 50px;
 	border: none;
-	margin-top: 20px;
-	border-radius: 8px;
+	margin-top: 40px;
+	margin-bottom: 20px;
+	border-radius: 5px;
 }
 
 button:hover {
 	cursor: pointer;
 	background-color: #91a827;
+	transform: scale(1.05);
 }
 
 #bottom-right {
@@ -119,4 +120,25 @@ ul {
 	padding: 0;
 	list-style: none;
 	opacity: 0.7;
+}
+
+/* desktop-first breakpoint */
+/* @media (max-width: 900px) {
+	#card, #bottom-left, #bottom-right{
+		width: 100%;
+		height: auto;
+	}
+} */
+
+
+/* mobile first breakpoint */
+@media (min-width: 900px) {
+	#card {
+		width: 900px;
+		height: 600px;
+	}
+	
+	#bottom-left, #bottom-right {
+		width: 50%;
+	}
 }
